# strict

./: Cargo.toml  README.md
src/: lib.rs  non_empty_slice.rs  non_empty_vec.rs  one_to_three.rs
