[package]
name = "strict"
version = "0.1.4"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/strict"
description = "NonEmptyVec, a vec guaranteed to hold at least one element"
edition = "2021"
keywords = ["vec"]
license = "MIT"
categories = []
readme = "README.md"

[dependencies]
